Fix fitting to viewport on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,14 @@
-
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
 body {
     display: flex;
     flex-direction: column;
     font-size: 12px;
-    margin: 0;
-    padding: 0;
     font-weight: 500;
     box-sizing: border-box;
     font-family: "Inter Tight", sans-serif;
@@ -14,8 +18,6 @@ body {
     font-variation-settings:
       "slnt" 0;
     background-color: #232323;
-    overflow: hidden;
-    height: 100vh;
 }
 .main {
     display: flex;
